--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@slack/bolt": "^3.22.0",
-    "@upstash/redis": "^1.34.4",
-    "node-cron": "^3.0.3"
+    "@upstash/redis": "^1.34.4"
   },
   "engines": {
     "node": ">=18.0.0"
